# fobword

./: .gitignore  .gitmodules  Cargo.toml  README.md  Raspberry_pi_zero_w_-_usb_dongle.md  cross.toml  qwerty-layout.txt  setup.md
.cargo/: config.toml
fobword-core/: .gitignore  Cargo.toml
fobword-core/src/: app.rs  command.rs  config.rs  converter.rs  db.rs  error.rs  iohelper.rs  lib.rs  temp_filer.rs  yaml_config.rs
fobword-core/tests/: converter-tests.rs  iohelper-tests.rs  temp_filer_tests.rs
src/: app.rs  converterutilities.rs  db.rs  error.rs  iohelper.rs  main.rs  writer.rs
