[package]
name = "dys-template"
version = "0.1.0"
authors = ["emucc <github@elrimer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fobword-core = {path = "fobword-core"}
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }